# quartz

./: quartz.config.ts  quartz.layout.ts
.github/workflows/: deploy.yml
content/: arduino-spi-slave.md  boost-converter.md  browser-robot-controller.md  data-line-protection.md  discourses-and-selected-writings.md  diy-geocache-gps.md  documentation-python-script.md  end-of-line-board.md  fpga-and-avalon-interfaces.md  fpga-python-script.md  how-datasheets-can-be-misleading.md  index.md  lgvl-simulator-vscode-macos.md  matrix-led-lol.md  motor-mosfet-research.md  pet-water-fountain.md  psu-ka3005p-due.md  rust-chars.md  sensor-monitoring-fpga-adc-ltc2308-eclipse.md  sensor-monitoring-fpga-adc-ltc2308.md  smoke-extractor.md  starting-on-fpga.md  the-significance-gracefull-errors.md  version-control-script.md  year-2021-recap.md
content/battlebutbot/: 2wd-bot.md  bot1.md  browser-robot-controller.md
content/cmake/: cmake-basics.md  cmake-for-embedded.md  cmake-presets.md  cmake.md
content/cmake/example-1/: CMakeLists.txt
content/cmake/example-1/src/: test.c
content/cmake/example-1/test_lib/: CMakeLists.txt
content/cmake/example-2/: CMakeLists.txt  CMakePresets.json  example  notes.md
content/cmake/example-2/test_lib/: test_lib.h
content/fpga/: fpga-and-avalon-interfaces.md  sensor-monitoring-fpga-adc-ltc2308.md  starting-on-fpga.md
content/img/: IMG_6186.heic
content/smoke-extractor/: boost-converter.md  smoke-extractor.md
content/stm32/: gpio.md  systick.md
content/zephyr/: intro-gpio-pwm.md
quartz/components/: Head.tsx
(+1 files in other folders)
